# AxC

./: .gitignore  README.md
axc-controller/: Cargo.toml
axc-controller/src/: lib.rs  main.rs  pod.rs
axc-operator/: Cargo.toml  nginx.yaml  test.yaml
axc-operator/src/: main.rs
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
controller/: Cargo.toml  config.toml
controller/src/: lib.rs  main.rs  pod.rs  utils.rs  volume.rs
test-kube/: Cargo.toml
test-kube/src/: main.rs
