[package]
name = "axc-operator"
version = "0.1.0"
authors = ["Permpoon B."]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log4rs = "1.0.0"
log = "0.4.14"
kube = "0.52.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_19"] } 
tokio = { version = "1", features = ["full"] }