[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
kube = {version = "0.74.0", features = ["runtime", "derive"]}
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_22"] } 
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3.17"
anyhow = "1.0.44"
tracing = "0.1.29"
actix-web = "4"