[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["openssl-tls", "kubederive", "ws", "latest", "runtime"]
kubederive = ["kube/derive"]
openssl-tls = ["kube/client", "kube/openssl-tls"]
rustls-tls = ["kube/client", "kube/rustls-tls"]
runtime = ["kube/runtime"]
ws = ["kube/ws"]
latest = ["k8s-openapi/v1_25"]

[dependencies]
tokio = { version = "1", features = ["full"] }
kube = { version = "0.75.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "^0.9"
futures = "0.3.17"
anyhow = "1.0.44"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
tokio-util = "0.7.0"
actix-web = "^4"
actix-cors = "0.6.3"